module-system/sov-modules-macros/tests/module_info/not_supported_attribute.stderr
error: Only `#[module]`, `#[state]` or `#[address]` attributes are supported.
  --> tests/module_info/not_supported_attribute.rs:10:5
   |
10 |     test_state1: StateMap<u32, String>,
   |     ^^^^^^^^^^^

error: cannot find attribute `other` in this scope
 --> tests/module_info/not_supported_attribute.rs:9:7
  |
9 |     #[other]
  |       ^^^^^
